--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseURL = "http://example.org/"
+baseURL = "https://suspicious-pare-9e77ba.netlify.app"
 languageCode = "en-us"
 title = "Forty"
 theme = "forty"
